# LY_Station2

./: .clangd  .clangd.disabled  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.ini  scan_paths_config.README.md  scan_paths_config.json
Log/: OrbbecSDK.log.txt
app/: CMakeLists.txt
app/include/scan_tracking/app/: console_runtime.h
app/src/: console_runtime.cpp  main.cpp
cmake/: LivoxSdk2.cmake  OpenCvBundle.cmake  OrbbecSdk.cmake  PclRuntime.cmake  clion-msvc2019-v142-env.bat
common/: CMakeLists.txt
common/src/: capture_cache_paths.cpp  config_manager.cpp  logger.cpp  station_profile.cpp
config/scan_paths/: station1_default.json  station2_cylinder_semi.json  station2_endcap.json  station2_placeholder.json  station2_semi_finished.json
config/station_profiles/: station1_endcap.ini  station2_cylinder_semi.ini  station2_endcap.ini  station2_semi_finished.ini
docs/: 1.11_完整扫描流程时序图.md  5_26主流程代码审查报告.md  6.11_完整扫描流程时序图.md  HMI开发交接说明.md  HMI现场联调_阶段0-1.md  LBN离线调通交接说明.md  README.md  plc_modbus_寄存器地址表_v0.1.xlsx  多点位扫描与位姿跟踪完整流程.md  多路径扫描代码改动评估报告.md  封头检测工位PLC-IPC Modbus通信协议_v0.1.md  封头检测工位_TCP_IP显控通信协议_v1.0.md  待完善细节清单_PLC联调前.md  现场联调_多路径配置说明.md  算法使用API.md  项目未完成事项清单_v1.0.md
docs/guides/: README.md  flow_control架构说明.md  双工位改造进度与续接指南.md  工作流程-AI-Agent参考.md  扫描路径配置说明.md  第二工位骨架删减说明.md
docs/hmi/: HMI开发交接说明.md  HMI现场联调_阶段0-1.md  README.md
docs/hmi/checklists/: 现场联调_阶段0-1.md
docs/protocols/: README.md  plc_modbus_寄存器地址表_v0.1.xlsx  plc_modbus_寄存器地址表_v0.2.xlsx  封头检测工位PLC-IPC Modbus通信协议_v0.1.md  封头检测工位_TCP_IP显控通信协议_v1.0.md
docs/sequence_diagrams/: 2.1_系统安全与并行监控时序图.md  2.2_封头模式主流程时序图.md  README.md
docs/station1/: 1.11_完整扫描流程时序图.md  README.md  多点位扫描与位姿跟踪完整流程.md  现场联调_PLC不改方案.md  现场联调_多路径配置说明.md  算法使用API.md  项目未完成事项清单_v1.0.md
docs/station2/: Agent提示词-阶段1-双工位架构落地.md  README.md  双工位改造进度与续接指南.md  工作流程-AI-Agent参考.md  扫描路径配置说明.md  第一工位重构计划.md  第二工位骨架删减说明.md
modules/: CMakeLists.txt
modules/flow_control/: CMakeLists.txt
modules/flow_control/include/scan_tracking/flow_control/: inspection_types.h  plc_protocol.h  plc_task_host.h  scan_path_types.h  scan_segment_cache.h  state_machine.h  station2_inspection.h  station_trigger_policy.h  task_handler_context.h  task_handler_registry.h
modules/flow_control/include/scan_tracking/flow_control/detail/: state_machine_internal.h
modules/flow_control/include/scan_tracking/flow_control/handlers/: code_read_handler.h  inspection_handler.h  itask_handler.h  load_grasp_handler.h  pose_check_handler.h  result_reset_handler.h  scan_capture_common.h  scan_segment_handler.h  self_check_handler.h  station_material_check_handler.h  telescopic_scan_handler.h  unload_calc_handler.h
modules/flow_control/src/: inspection_types.cpp  scan_segment_cache.cpp  state_machine.cpp  state_machine_helpers.cpp  state_machine_inspection.cpp  state_machine_modbus.cpp  state_machine_plc_io.cpp  state_machine_scan.cpp  station2_inspection.cpp  station_trigger_policy.cpp
modules/flow_control/src/handlers/: code_read_handler.cpp  inspection_handler.cpp  load_grasp_handler.cpp  pose_check_handler.cpp  result_reset_handler.cpp  scan_capture_common.cpp  scan_segment_handler.cpp  self_check_handler.cpp  station_material_check_handler.cpp  task_handler_registry.cpp  telescopic_scan_handler.cpp  unload_calc_handler.cpp
modules/hmi_server/: CMakeLists.txt
modules/livox_mid360/: CMakeLists.txt
modules/livox_mid360/include/scan_tracking/livox_mid360/: livox_mid360_service.h  livox_mid360_types.h  livox_mid360_worker.h
modules/livox_mid360/src/: livox_mid360_service.cpp  livox_mid360_worker.cpp
modules/mech_eye/: CMakeLists.txt
modules/mech_eye/include/scan_tracking/mech_eye/: mech_eye_service.h  mech_eye_types.h  mech_eye_worker.h  point_cloud_io.h  point_cloud_processor.h
modules/mech_eye/src/: mech_eye_service.cpp  mech_eye_worker.cpp  point_cloud_io.cpp  point_cloud_processor.cpp
modules/mech_eye/tests/: point_cloud_io_test.cpp  point_cloud_processor_test.cpp
modules/orbbec_gemini/: CMakeLists.txt
modules/orbbec_gemini/include/scan_tracking/orbbec_gemini/: orbbec_capture_io.h  orbbec_gemini_service.h  orbbec_gemini_types.h  orbbec_gemini_worker.h
modules/orbbec_gemini/src/: gemini335_smoke_runner.cpp  orbbec_capture_io.cpp  orbbec_gemini_service.cpp  orbbec_gemini_worker.cpp
modules/tfmini_plus/: CMakeLists.txt
modules/tfmini_plus/include/scan_tracking/tfmini_plus/: tfmini_plus_service.h  tfmini_plus_types.h  tfmini_plus_worker.h
modules/tfmini_plus/src/: tfmini_plus_service.cpp  tfmini_plus_worker.cpp
modules/tracking/: CMakeLists.txt
modules/tracking/include/scan_tracking/tracking/: tracking_service.h
modules/tracking/src/: lb_pose_check.cpp  tracking_service.cpp
modules/tracking/tests/: tracking_service_smoke_test.cpp
modules/vision/: CMakeLists.txt
modules/vision/include/scan_tracking/vision/: bevel_measurement_adapter.h  hik_camera_c_controller.h  hik_camera_service.h  hik_cxp_camera_service.h  hik_cxp_mono_io.h  hik_mono_io.h  hik_mvs_sdk_runtime.h  hik_smart_camera_tcp_server.h  hole_measurement_adapter.h  internal_surface_measurement_adapter.h  lb_pose_detection_adapter.h  lbn_pose_detection_adapter.h  thickness_measurement_adapter.h  vision_pipeline_service.h  vision_types.h
modules/vision/src/: bevel_measurement_adapter.cpp  hik_camera_c_controller.cpp  hik_camera_service.cpp  hik_cxp_camera_service.cpp  hik_cxp_mono_io.cpp  hik_mono_io.cpp  hik_mvs_sdk_runtime.cpp  hik_smart_camera_ftp_monitor.cpp  hik_smart_camera_tcp_server.cpp  hole_measurement_adapter.cpp  internal_surface_measurement_adapter.cpp  lanyou_detection_adapter.cpp  lanyou_first_station_adapter.cpp  lb_pose_detection_adapter.cpp  lb_pose_detection_adapter_stub.cpp  lbn_pose_detection_adapter.cpp  lbn_pose_detection_adapter_stub.cpp  thickness_measurement_adapter.cpp  vision_pipeline_service.cpp
modules/vision/tests/: bevel_measurement_adapter_smoke_test.cpp  cxp_smoke_runner.cpp  hik_mono_io_test.cpp  lbn_offline_runner.cpp
scripts/: deploy_ipc_verify.py  package_deploy_debug.py
tools/: scan_tracking_dev.cmd
(+25 files in other folders)
